
- module :mod:`lib.ggplot2` for the CRAN package ggplot2.

- renaming of few classes, the *R* prefix: :class:`Formula` (from *RFormula*),
  :class:`DataFrame` (from *RDataFrame*), :class:`Array` (from *RArray*),
  :class:`Matrix` (from *RMatrix*), :class:`Environment` (from *REnvironment*),
  :class:`Function` (from *RFunction*), :class:`Vector` (from *RVector*).

:mod:`rpy2.rinterface`:

- :data:`globalEnv`, :data:`baseNameSpaceEnv`, and :data:`emptyEnv` 
  were renamed to :data:`globalenv`, :data:`baseenv` and :data:`emptyenv`
  respectively

- The parameter *wantFun* in :meth:`SexpEnvironment.get` is now *wantfun* 

- The call-back getters and setters are now :func:`get_readconsole`,
  :func:`set_readconsole`, :func:`get_writeconsole`, :func:`set_writeconsole`,
  :func:`get_flushconsole`, and :func:`set_flushconsole`.

- Functions also accept named parameters equal to Py_None, and transform them to R
  NULL (previously only accepted parameters inheriting from Sexp).

:mod:`rpy2.rlike`:

- :class:`ArgDict` becomes :class:`OrdDict`.

- :meth:`tags` of :class:`TaggedList` is now a property (with a getter
  and a setter)


Bugs fixed
----------

- :meth:`REnvironment.get` now accepts a named parameter *wantFun*
  (like :meth:`rinterface.SexpEnvironment` does)

- :class:`rinterface.SexpVector` will now properly raise an exception
  when trying to create vector-like object of impossible type

- R objects of class *matrix* are now properly converted into :class:`RMatrix`
  (instead of :class:`Array`)


Release 2.0.7
=============

Bugs fixed
----------

- On win32, printing an object was leaving an open file handle behind each time,
  leading to an error and the impossibility to print
  (# bug report and fix by Christopher Gutierrez)


Release 2.0.6
=============

No user-visible change. Win32-specific additions to the C module
were made to compile it.


Release 2.0.5
=============

Bugs fixed
----------
